--- a/blog/forum/templates/post_detail.html
+++ b/blog/forum/templates/post_detail.html
@@ -1,5 +1,5 @@
-
-
+{% extends 'base.html' %}
+{% block content %}
 <h1>{{post.title}}</h1>
 <small>By: {{post.author.first_name}} {{post.author.last_name}}</small><br/>
 <hr>
@@ -9,3 +9,4 @@
 
 <br><br>
 <a href="{% url 'home' %}">Back</a>
+{% endblock %}
