--- a/blog/forum/templates/post_detail.html
+++ b/blog/forum/templates/post_detail.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}{{post.title_tag}}{% endblock %}
 {% block content %}
+
 <h1>{{post.title}}</h1>
 <small>By: {{post.author.first_name}} {{post.author.last_name}}</small><br/>
 <hr>
@@ -8,5 +10,5 @@
 
 
 <br><br>
-<a href="{% url 'home' %}">Back</a>
+<a href="{% url 'home' %}" class="btn btn-primary">Back</a>
 {% endblock %}
