--- a/blog/forum/templates/home.html
+++ b/blog/forum/templates/home.html
@@ -5,7 +5,7 @@
 {% for post in object_list %}
     <div class="card" style="width: 18rem;">
         <div class="card-header">
-            <a href="{% url 'post-detail' post.pk %}" class="card-title">{{post.title}}</a> - <small><a href="{% url 'post-edit' post.pk %}">[Edit]</a></small>
+            <a href="{% url 'post-detail' post.pk %}" class="card-title">{{post.title}}</a> - <small><a href="{% url 'post-edit' post.pk %}">[Edit]</a>|<a href="{% url 'post-delete' post.pk %}">[Delete]</a></small>
         </div>
         <div class="card-body">
             <h6 class="card-subtitle mb-2 text-muted">By: {{post.author.first_name}} {{post.author.last_name}}</h6>
