--- a/blog/forum/templates/post_edit.html
+++ b/blog/forum/templates/post_edit.html
@@ -11,7 +11,7 @@
                 {{form|crispy}}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-success" type="submit">Update Post</button>
+                <button class="btn btn-warning" type="submit">Update Post</button>
             </div>
     </form>
 </div>
