--- a/blog/forum/templates/post_detail.html
+++ b/blog/forum/templates/post_detail.html
@@ -3,7 +3,8 @@
 {% block content %}
 
 <h1>{{post.title}}</h1>
-<small>By: {{post.author.first_name}} {{post.author.last_name}} - <a href="{% url 'post-edit' post.pk %}">[Edit]</a>|<a href="{% url 'post-delete' post.pk %}">[Delete]</a></small><br/>
+<small>By: {{post.author.first_name}} {{post.author.last_name}} - {{post.post_date}}
+    <a href="{% url 'post-edit' post.pk %}">[Edit]</a>|<a href="{% url 'post-delete' post.pk %}">[Delete]</a></small><br/>
 <hr>
 <br>
 {{post.body}}
