User login authentication
User login authentication + styling

--- a/blog/forum/templates/base.html
+++ b/blog/forum/templates/base.html
@@ -27,6 +27,12 @@
             </li>
           </ul>
         </div>
+
+        <!-- Navbar Right Side -->
+        <div class="navbar-nav">
+            <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+            <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+        </div>
       </nav>
     <br>
     <div class="container">
