--- a/blog/forum/templates/base.html
+++ b/blog/forum/templates/base.html
@@ -22,6 +22,7 @@
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
+        {% if user.is_authenticated %}
             <li class="nav-item">
               <a class="nav-link" href="{% url 'post-add' %}">Add Post</a>
             </li>
@@ -30,9 +31,18 @@
 
         <!-- Navbar Right Side -->
         <div class="navbar-nav">
-            <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
-            <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+            <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
         </div>
+        {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'register' %}">Register</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'login' %}">Login</a>
+            </li>
+          </ul>
+        </div>
+        {% endif %}
       </nav>
     <br>
     <div class="container">
