--- a/blog/forum/templates/post_add.html
+++ b/blog/forum/templates/post_add.html
@@ -3,6 +3,7 @@
 {% block title %}Create a New Blog Post!{% endblock %}
 {% block content %}
 
+{% if user.is_authenticated %}
 <div class="content-section">
     <form method="POST">
         {% csrf_token %}
@@ -15,7 +16,10 @@
             </div>
     </form>
 </div>
-
-
+{% else %}
+<div class="content-section">
+    <h3>Please <a class="ml-2" href="{% url 'login' %}">Login</a> to continue..</h3>
+</div>
+{% endif %}
 
 {% endblock %}
