--- a/blog/forum/templates/post_delete.html
+++ b/blog/forum/templates/post_delete.html
@@ -3,6 +3,7 @@
 {% block title %}Delete a Blog Post{% endblock %}
 {% block content %}
 
+{% if user.is_authenticated %}
 <div class="content-section">
     <h4>Delete: {{post.title}}</h4>
     <br>
@@ -15,7 +16,10 @@
             </div>
     </form>
 </div>
-
-
+{% else %}
+<div class="content-section">
+    <h3>Please <a class="ml-2" href="{% url 'login' %}">Login</a> to continue..</h3>
+</div>
+{% endif %}
 
 {% endblock %}
