--- a/blog/forum/templates/post_detail.html
+++ b/blog/forum/templates/post_detail.html
@@ -4,7 +4,11 @@
 
 <h1>{{post.title}}</h1>
 <small>By: {{post.author.first_name}} {{post.author.last_name}} - {{post.post_date}}
+    
+    {% if user.is_authenticated %}
     <a href="{% url 'post-edit' post.pk %}">[Edit]</a>|<a href="{% url 'post-delete' post.pk %}">[Delete]</a></small><br/>
+    {% endif %}
+    
 <hr>
 <br>
 {{post.body}}
