--- a/blog/forum/templates/base.html
+++ b/blog/forum/templates/base.html
@@ -26,6 +26,9 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'post-add' %}">Add Post</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'category-add' %}">Add Category</a>
+            </li>
           </ul>
         </div>
 
