User authentication for edit and delete posts
User authentication for edit and delete posts + styling

--- a/blog/forum/templates/categories.html
+++ b/blog/forum/templates/categories.html
@@ -22,6 +22,7 @@
 {% else %}
     <h3>Oops, this page doesn't exist..</h3>
 {% endif %}
-
+<br><br>
+<a href="{% url 'home' %}" class="btn btn-primary">Back</a>
 {% endblock %}
 
