--- a/blog/forum/templates/base.html
+++ b/blog/forum/templates/base.html
@@ -19,9 +19,29 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-      
+        
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
+            <!-- Navbar Catgeory Dropdown -->
+            {% if ops_menu %}
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Categories
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+
+                {% for item in ops_menu %}
+                <a class="dropdown-item" href="{% url 'category-view' item %}">{{item}}</a><br/>
+                {% endfor %}
+
+            </li>
+
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'category-list' %}">Categories</a>
+            </li>
+            {% endif %}
+
         {% if user.is_authenticated %}
             <li class="nav-item">
               <a class="nav-link" href="{% url 'post-add' %}">Add Post</a>
