--- a/blog/forum/templates/post_detail.html
+++ b/blog/forum/templates/post_detail.html
@@ -2,11 +2,15 @@
 {% block title %}{{post.title_tag}}{% endblock %}
 {% block content %}
 
+
+<!-- current user = {{user.id}} -->
+<!-- post author = {{post.author.id}} -->
+
 <h1>{{post.title}}</h1>
 <small>By: {{post.author.first_name}} {{post.author.last_name}} - {{post.post_date}}
     
-    {% if user.is_authenticated %}
-    <a href="{% url 'post-edit' post.pk %}">[Edit]</a>|<a href="{% url 'post-delete' post.pk %}">[Delete]</a></small><br/>
+    {% if user.is_authenticated and post.author.id == user.id %}
+            <a href="{% url 'post-edit' post.pk %}">[Edit]</a>|<a href="{% url 'post-delete' post.pk %}">[Delete]</a></small><br/>
     {% endif %}
     
 <hr>
