--- a/blog/forum/templates/post_edit.html
+++ b/blog/forum/templates/post_edit.html
@@ -3,23 +3,23 @@
 {% block title %}Update a Blog Post{% endblock %}
 {% block content %}
 
-{% if user.is_authenticated %}
-<div class="content-section">
-    <form method="POST">
-        {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Edit Blog Post</legend>
-                {{form|crispy}}
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-warning" type="submit">Update Post</button>
-            </div>
-    </form>
-</div>
+{% if user.is_authenticated and post.author.id == user.id %}
+    <div class="content-section">
+        <form method="POST">
+            {% csrf_token %}
+                <fieldset class="form-group">
+                    <legend class="border-bottom mb-4">Edit Blog Post</legend>
+                    {{form|crispy}}
+                </fieldset>
+                <div class="form-group">
+                    <button class="btn btn-warning" type="submit">Update Post</button>
+                </div>
+        </form>
+    </div>
 {% else %}
-<div class="content-section">
-    <h3>Please <a class="ml-2" href="{% url 'login' %}">Login</a> to continue..</h3>
-</div>
+    <div class="content-section">
+        <h3>Please <a class="ml-2" href="{% url 'login' %}">Login</a> to continue..</h3>
+    </div>
 {% endif %}
 
 
