--- a/blog/forum/templates/post_add.html
+++ b/blog/forum/templates/post_add.html
@@ -4,22 +4,27 @@
 {% block content %}
 
 {% if user.is_authenticated %}
-<div class="content-section">
-    <form method="POST">
-        {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Blog Post</legend>
-                {{form|crispy}}
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-success" type="submit">Add Post</button>
-            </div>
-    </form>
-</div>
+    <div class="content-section">
+        <form method="POST">
+            {% csrf_token %}
+                <fieldset class="form-group">
+                    <legend class="border-bottom mb-4">Blog Post</legend>
+                    {{form|crispy}}
+                </fieldset>
+                <div class="form-group">
+                    <button class="btn btn-outline-success" type="submit">Add Post</button>
+                </div>
+        </form>
+    </div>
+
+    <script>
+        let name = "{{user.id}}";
+        document.getElementById("show").value = name;
+    </script>
 {% else %}
-<div class="content-section">
-    <h3>Please <a class="ml-2" href="{% url 'login' %}">Login</a> to continue..</h3>
-</div>
+    <div class="content-section">
+        <h3>Please <a class="ml-2" href="{% url 'login' %}">Login</a> to continue..</h3>
+    </div>
 {% endif %}
 
 {% endblock %}
