--- a/blog/forum/templates/post_add.html
+++ b/blog/forum/templates/post_add.html
@@ -9,10 +9,11 @@
             {% csrf_token %}
                 <fieldset class="form-group">
                     <legend class="border-bottom mb-4">Blog Post</legend>
+                    {{form.media}}
                     {{form|crispy}}
                 </fieldset>
                 <div class="form-group">
-                    <button class="btn btn-outline-success" type="submit">Add Post</button>
+                    <button class="btn btn-success" type="submit">Add Post</button>
                 </div>
         </form>
     </div>
