--- a/blog/forum/templates/post_edit.html
+++ b/blog/forum/templates/post_edit.html
@@ -9,6 +9,7 @@
             {% csrf_token %}
                 <fieldset class="form-group">
                     <legend class="border-bottom mb-4">Edit Blog Post</legend>
+                    {{form.media}}
                     {{form|crispy}}
                 </fieldset>
                 <div class="form-group">
