--- a/blog/forum/templates/base.html
+++ b/blog/forum/templates/base.html
@@ -54,6 +54,7 @@
 
         <!-- Navbar Right Side -->
         <div class="navbar-nav">
+            <a class="nav-item nav-link" href="{% url 'edit-profile' %}">Profile</a>
             <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
         </div>
         {% else %}
