--- a/blog/forum/templates/category_add.html
+++ b/blog/forum/templates/category_add.html
@@ -12,7 +12,7 @@
                 {{form|crispy}}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-success" type="submit">Add</button>
+                <button class="btn btn-success" type="submit">Add</button>
             </div>
     </form>
 </div>
