--- a/blog/forum/templates/post_add.html
+++ b/blog/forum/templates/post_add.html
@@ -5,7 +5,7 @@
 
 {% if user.is_authenticated %}
     <div class="content-section">
-        <form method="POST">
+        <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
                 <fieldset class="form-group">
                     <legend class="border-bottom mb-4">Blog Post</legend>
