--- a/blog/forum/templates/post_detail.html
+++ b/blog/forum/templates/post_detail.html
@@ -15,6 +15,12 @@
     
 <hr>
 <br>
+
+{% if post.head_image %}
+    <img src="{{post.header_image.url}}">
+{% endif %}
+
+<br><br>
 {{post.body|safe}}
 
 
