--- a/blog/forum/templates/post_detail.html
+++ b/blog/forum/templates/post_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title %}{{post.title_tag}}{% endblock %}
 {% block content %}
 
@@ -44,5 +45,43 @@
     {% endif %}
     - {{total_likes}} Likes
 </form>
+
+<br><br>
+<hr>
+<div class="card mb-3">
+    <div class="row no-gutters">
+      <div class="col-md-2">
+        {% if post.author.profile.profile_pic %}
+            <img src="{{post.author.profile.profile_pic.url}}" class="card-img">
+        {% else %}
+            <img src="{% static 'blog/images/default-picture.png' %}" class="card-img">
+        {% endif %}
+      </div>
+      <div class="col-md-10">
+        <div class="card-body">
+          <h5 class="card-title">{{post.author.first_name}} {{post.author.last_name}}</h5>
+          <p class="small text-muted">
+                {% if post.author.profile.website_url %}
+                    <a href="{{post.author.profile.website_url}}">Website | </a>
+                {% endif %}
+                {% if post.author.profile.facebook_url %}
+                    <a href="{{post.author.profile.facebook_url}}">Facebook | </a>
+                {% endif %}
+                {% if post.author.profile.twitter_url %}
+                    <a href="{{post.author.profile.twitter_url}}">Twitter | </a>
+                {% endif %}
+                {% if post.author.profile.insta_url %}
+                    <a href="{{post.author.profile.insta_url}}">Instagram | </a>
+                {% endif %}
+                {% if post.author.profile.linkedin_url %}
+                    <a href="{{post.author.profile.linkedin_url}}">LinkedIn</a>
+                {% endif %}
+          </p>
+          <p class="card-text">{{post.author.profile.bio}}</p>
+        </div>
+      </div>
+    </div>
+</div>
+
 
 {% endblock %}
