User profile page debug
Ability to create a profile as a new user + stlying

--- a/blog/accounts/templates/registration/profile_edit.html
+++ b/blog/accounts/templates/registration/profile_edit.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
-{% block title %}Edit User Profile{% endblock %}
+{% block title %}Account Settings{% endblock %}
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="content-section">
         <form method="POST">
             {% csrf_token %}
                 <fieldset class="form-group">
-                    <legend class="border-bottom mb-4">Update Your Profile</legend>
+                    <legend class="border-bottom mb-4">Update Your Settings</legend>
                     {{user.profile.bio}}
                     <br><br>
                     {{form|crispy}}
