--- a/blog/accounts/templates/registration/user-profile.html
+++ b/blog/accounts/templates/registration/user-profile.html
@@ -39,6 +39,9 @@
                     {{page_user.bio}} 
                 </p>
               </div>
+              <br><br><br>
+              <hr>
+              <small><a href="{% url 'edit-profile-page' user.profile.id %}">[Edit Profile]</a></small>
             </div>
         </div>
     </div>
