--- a/blog/forum/templates/base.html
+++ b/blog/forum/templates/base.html
@@ -59,7 +59,7 @@
         <div class="navbar-nav">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Profile
+                Hello, {{user}}
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 {% if user.profile.id %}
